# qdrive

./: README.md  research.ipynb
api-server/: Cargo.toml
api-server/src/: lib.rs  main.rs
api-server/src/handlers/: mod.rs
api-server/src/models/: mod.rs
api-server/src/routes/: mod.rs
node-server/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
node-server/paths/: blob.json
node-server/src/: app.js  app.ts  upload.js  upload.ts  uploadweb3.js
sentence-transformers/: app.py
