[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["add-extension", "trace"] }
reqwest = { version = "0.11.3" , features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
